# AutoTA

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  QUICKSTART.md  README.md  STATUS.md  demo.sh  dev.sh  package-lock.json  package.json  playwright.config.js  pyproject.toml  quick_start.sh  seed.sh  setup.sh  start-backend.sh  start-frontend.sh
autota/: __init__.py  cli.py  generator.py  models.py  orchestrator.py  prompt_builder.py  template_generator.py
autota/solver/: __init__.py  quine_mccluskey.py
autota/verify/: __init__.py  base.py  boolean.py  registry.py
autota/web/: __init__.py  app.py  auth.py  db.py  seed.py  variant_draw.py
data/: .gitkeep  README.md
demos/: demo_grading.py  demo_no_api.py  demo_solver.py  demo_template_generator.py  test_api_quick.py
docs/: 001_initial_schema.sql  autota-instructor-prototype-v2.jsx  autota-quiz-prototype.jsx  ui-prototype.jsx
docs/phase2/: PHASE2_COMPLETE.md  PHASE2_PROGRESS.md  QUICKSTART_PHASE2.md
frontend/: index.html  package-lock.json  package.json  vitest.config.js
frontend/src/: App.jsx  (+4 more)
migrations/: 002_schema_hardening.sql  004_quiz_mode.sql  backfill_variant_pool.py  run_004.py  seed_quiz.py
specs/: PHASE2.1_SCHEMA_MIGRATION.md  PHASE2.2_INSTRUCTOR_DASHBOARD.md  PHASE2.3_QUIZ_MODE.md  PHASE2_SPEC.md  example_kmap.yaml
tests/: __init__.py  conftest.py  test_boolean_verifier.py  test_grading.py  test_http_instructor.py  test_http_quiz.py  test_integration.py  test_mock_generation.py  test_models.py  test_quine_mccluskey.py  test_quiz.py  test_template_generator.py
(+23 files in other folders)
